0.16
 - Add Wikibase::Datatype::Print::print() for all top objects like
   Item/Lexeme/Mediainfo and Property.
 - Add link to Value::Lexeme to Wikibase::Datatype::Print.
 - Fix modules used in tests for Wikibase::Datatype::Print::Lexeme.

0.15 2023-10-29T16:44:43+01:00
 - Fix test dependencies.
 - Simplify code for Wikibase::Datatype::Print::Value::Item.
 - Simplify code for Wikibase::Datatype::Print::Value::Lexeme.
 - Simplify code for Wikibase::Datatype::Print::Value::Property.
 - Simplify code for Wikibase::Datatype::Print::Value::Quantity.

0.14 2023-10-27T23:09:31+02:00
 - Add Wikibase::Datatype::Print::Lexeme.
 - Update Module::Install to 1.21 version.

0.13 2023-05-02T09:29:21+02:00
 - Add doc for Wikibase::Datatype::Print::Mediainfo.
 - Add doc for Wikibase::Datatype::Print::Property.
 - Add example for print_forms() to Util.
 - Finish Print doc.
 - Fix print() function in doc. More contexts.

0.12 2023-04-24T18:40:57+02:00
 - Add doc for Wikibase::Datatype::Print::Item.
 - Fix dependency to Wikidata::Datatype::Value::Sense.

0.11 2023-04-23T18:41:18+02:00
 - Add doc example in Utils.
 - Add comments.
 - Add support for before/after in year precision in Time.
 - Add support for decade precision in Time.
 - Fix MANIFEST file for sense value test.
 - Fix support of bigger year than with 4 characters.
 - Improve datetime precision print.

0.10 2023-04-23T10:57:02+02:00
 - Add doc for Wikibase::Datatype::Print::Lexeme.
 - Add support of sense to Value.
 - Add Wikibase::Datatype::Print::Value::Sense.
 - Fix test message.

0.09 2023-04-21T21:13:56+02:00
 - Add doc for Wikibase::Datatype::Print::Form.
 - Add doc for Wikibase::Datatype::Print::Reference.
 - Add doc for Wikibase::Datatype::Print::Sense.
 - Improve printing of time.

0.08 2023-04-18T01:48:41+02:00
 - Add doc for Wikibase::Datatype::Print::MediainfoStatement.
 - Add error check to Wikibase::Datatype::Print::Value::Time.
 - Add test for Utils::print_common().