@@ -2,6 +2,7 @@
  - Add Wikibase::Datatype::Print::print() for all top objects like
    Item/Lexeme/Mediainfo and Property.
  - Add link to Value::Lexeme to Wikibase::Datatype::Print.
+ - Add option 'no_print_references'.
  - Fix modules used in tests for Wikibase::Datatype::Print::Lexeme.
 
 0.15 2023-10-29T16:44:43+01:00
